# robot-motion-player

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README_zh.md  RELEASING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
docs/: IK_USAGE.md  OSS_SYNC_AUDIT.md  QUICKSTART_en.md  QUICKSTART_zh.md
example/robots/booster_t1/: T1_23dof.urdf  T1_23dof.xml
example/standard_dataset/: run1_subject5_standard.pkl
motion_player/: __init__.py
motion_player/backends/: __init__.py
motion_player/backends/isaac_backend/: __init__.py
motion_player/backends/mujoco_backend/: __init__.py  state_driver.py  viewer.py
motion_player/cli/: __init__.py  gui_runtime.py  gui_runtime_isolated.py  main.py
motion_player/core/: __init__.py
motion_player/core/convert/: __init__.py  backends.py  router.py
motion_player/core/dataset/: __init__.py  loader.py  motion.py  quat_utils.py
motion_player/core/editing/: __init__.py  edit_history.py  editor_session.py  frame_editor.py  segment_editor.py
motion_player/core/export/: __init__.py  video_export.py
motion_player/core/kinematics/: __init__.py  frame_transform.py  ik_backend_factory.py  ik_solver.py  joint_mapper.py  joint_order_auditor.py  pose_target.py  unit_conversion.py
motion_player/core/kinematics/ik_backends/: __init__.py  mujoco_xml_backend.py  pinocchio_urdf_backend.py
motion_player/core/metrics/: __init__.py  engine.py  per_frame_score.py
motion_player/core/ui/: __init__.py  command_queue.py  ik_payload.py  state_monitor.py
motion_player/gui/: __init__.py  command_models.py  command_runner.py  controller.py  dearpygui_panel.py  font_support.py  layout_policy.py  monitor_presenter.py  panel_ipc.py  status_dock_layout.py  timeline_widget.py  tune_state.py
motion_player/gui/tabs/: __init__.py  audio_tab.py  audit_tab.py  convert_tab.py  export_tab.py  layout_spec.py  metrics_tab.py  play_tab.py  tune_tab.py
scripts/: setup_linux.sh  setup_mac.sh  setup_windows.bat
tests/: conftest.py  test_cli_backend_selection.py  test_cli_export.py  test_cli_gui.py  test_docs_ik_usage.py  test_docs_version_state.py  test_error_paths.py  test_imports.py  test_release_backfill_state.py  test_roadmap_versions.py
tests/backends/: test_backend_contract.py  test_mujoco_integration.py  test_mujoco_save.py  test_mujoco_viewer.py  test_mujoco_viewer_ik_pose_sync.py  test_mujoco_viewer_integration.py
tests/cli/: test_convert_command.py  test_gui_runtime.py  test_gui_runtime_isolated.py
tests/core/: __init__.py  test_command_queue.py  test_dataset.py  test_editing.py  test_editor_session.py  test_editor_session_ik_propagation.py  test_frame_transform.py  test_ik_backend_factory.py  test_ik_backend_stability.py  test_ik_payload.py  test_ik_solver.py  test_kinematics.py  test_metrics.py  test_mujoco_xml_ik_backend.py  test_pinocchio_urdf_ik_backend.py  test_pose_target_and_units.py  test_state_monitor.py  test_ui.py  test_video_export.py
tests/gui/: test_command_runner.py  test_controller.py  test_dearpygui_panel.py  test_dearpygui_runtime_compat.py  test_font_support.py  test_gui_i18n_coverage.py  test_joint_selector_flow.py  test_layout_policy.py  test_monitor_card_visual_qa.py  test_monitor_presenter.py  test_panel_ipc.py  test_status_dock_layout.py  test_tab_layout_spec.py  test_timeline_widget.py  test_tune_dual_state.py  test_tune_state.py  test_tune_tab.py
tests/scripts/: test_oss_sync_apply_to_oss.py  test_oss_sync_build_staging.py
