[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-motion-player"
version = "0.7.0"
description = "Cross-platform AMP motion dataset visualiser and editor for legged robots"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "Mr-tooth" }]
keywords = [
    "robotics",
    "motion-player",
    "AMP",
    "MuJoCo",
    "motion-retargeting",
    "legged-robots",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
mujoco = [
    "mujoco>=3.0",
]
ik = [
    "pin>=2.6",          # pinocchio Python bindings (conda: pinocchio)
]
isaac = []               # Isaac SDK must be installed separately
gui = [
    "dearpygui>=1.11",
]
video = [
    "imageio>=2.34",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/Mr-tooth/robot-motion-player"
Issues = "https://github.com/Mr-tooth/robot-motion-player/issues"
Documentation = "https://github.com/Mr-tooth/robot-motion-player/blob/main/docs/design.md"

[project.scripts]
motion_player = "motion_player.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["motion_player*"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["B008", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["motion_player"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "mujoco_runtime: requires real MuJoCo runtime/display",
    "headless_integration: mock-based integration chain tests",
]
