[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-motion-player"
version = "0.7.0"
description = "Cross-platform robot motion data visualizer and editor for AMP datasets and trajectory optimization"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "Junhang Lai", email = "junhang.lai@example.com" }]
maintainers = [{ name = "Junhang Lai", email = "junhang.lai@example.com" }]
keywords = [
    "robotics",
    "motion-player",
    "AMP",
    "MuJoCo",
    "motion-retargeting",
    "legged-robots",
    "trajectory-optimization",
    "visualization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Robotics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
mujoco = [
    "mujoco>=3.0",
]
ik = [
    "pin>=2.6",
]
gui = [
    "dearpygui>=1.11",
]
video = [
    "imageio>=2.34",
]
all = [
    "robot-motion-player[mujoco,ik,gui,video]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/bitroboticslab/robot-motion-player"
Documentation = "https://github.com/bitroboticslab/robot-motion-player#readme"
Repository = "https://github.com/bitroboticslab/robot-motion-player.git"
Issues = "https://github.com/bitroboticslab/robot-motion-player/issues"
Changelog = "https://github.com/bitroboticslab/robot-motion-player/releases"

[project.scripts]
motion_player = "motion_player.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["motion_player*"]

[tool.setuptools.package-data]
motion_player = ["py.typed"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["B008", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["motion_player"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "mujoco_runtime: requires real MuJoCo runtime/display",
    "headless_integration: mock-based integration chain tests",
]
